--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! Abhay.... I am your webapp.
+        <div class="container">
+            <div class="center">
+               <img src="/ui/madi.png" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                Hi. My name is james Bond
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>
+                I work at Universal Exports.
+            </div>
+            <hr/>
+            <div class="footer">
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
