--- a/ui/index.html
+++ b/ui/index.html
@@ -6,13 +6,13 @@
     <body>
         <div class="container">
             <div class="center">
-               <img src="/ui/madi.png" class="img-medium"/>
+               <img id='madi' src="/ui/madi.png" class="img-medium"/>
             </div>
             <hr/>
             <br>
             <h3>Personal</h3>
             <div>
-                Hi. My name is james Bond
+                Hi. My name is James Bond
             </div>
             <hr/>
             <h3>Professional</h3>
