--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,1 +1,30 @@
-
+<html>
+  <head>
+	  <title> 
+		  Article one | James Bond
+          <\title>
+   <\head>
+   <body>
+       <div>
+	       <a href="/"> Home </a>
+       <\div>
+       <hr/>
+       <h3>
+	       Articel one
+       <\h3>
+       <div>
+	       Sep 23,2016
+       <\div>
+       <div>
+	       <p>
+	       This is the movie Diamonds are for ever! Bond gets to Willard Whyte at Baja Cal!
+	       </p>
+	       <p>
+	       This is the movie Diamonds are for ever! Bond gets to Willard Whyte at Baja Cal!
+	       </p>
+	       <p>
+	       This is the movie Diamonds are for ever! Bond gets to Willard Whyte at Baja Cal!
+	       </p>
+        <\div>
+   <\body>
+</html>
