[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,19 +2,19 @@
   <head>
 	  <title> 
 		  Article one | James Bond
-          <\title>
-   <\head>
+          </title>
+   </head>
    <body>
        <div>
 	       <a href="/"> Home </a>
-       <\div>
+       </div>
        <hr/>
        <h3>
 	       Articel one
-       <\h3>
+       </h3>
        <div>
 	       Sep 23,2016
-       <\div>
+       </div>
        <div>
 	       <p>
 	       This is the movie Diamonds are for ever! Bond gets to Willard Whyte at Baja Cal!
@@ -25,6 +25,6 @@
 	       <p>
 	       This is the movie Diamonds are for ever! Bond gets to Willard Whyte at Baja Cal!
 	       </p>
-        <\div>
-   <\body>
+        </div>
+   </body>
 </html>
