--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,9 +4,18 @@
 		  Article one | James Bond
           </title>
           <meta name="viewport" content="width=device-width, initial-scale=1" />
+          <style>
+          .container {
+              max-width:800px
+              magin: 0 auto;
+              color:grey;
+              font-family:sans-serif;
+          }
+          </style> 
+   
    </head>
    <body>
-       <div>
+       <div class="conatiner">
 	       <a href="/"> Home </a>
        </div>
        <hr/>
