--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -15,7 +15,7 @@
    
    </head>
    <body>
-       <div class="conatiner">
+       <div class="container">
 	       <a href="/"> Home </a>
        </div>
        <hr/>
