[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,6 +23,9 @@
             <div class="footer">
             </div>
         </div>
+        <script>
+            alert ('Hi I\'m javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
