[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,8 +11,8 @@
             <hr/>
             <br>
             <h3>Personal</h3>
-            <div>
-                Hi. My name is James Bond
+            <div class="center text-big bold">
+                Hi. My name is James Bond. This is my webapp!
             </div>
             <hr/>
             <h3>Professional</h3>
