--- a/ui/index.html
+++ b/ui/index.html
@@ -10,13 +10,13 @@
             </div>
             <hr/>
             <br>
-            <h3>Personal</h3>
+           
             <div class="center text-big bold">
                 Hi. My name is James Bond. This is my webapp!
             </div>
             <hr/>
-            <h3>Professional</h3>
-            <div>
+          
+            <div class="center text-big bold">
                 I work at Universal Exports.
             </div>
             <hr/>
