--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
             <hr/>
             <br>
            
-            <div class="center text-big bold">
+            <div id='main-text' class="center text-big bold">
                 Hi. My name is James Bond. This is my webapp!
             </div>
             <hr/>
