[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,12 +11,12 @@
             <hr/>
             <br>
            
-            <div id='main-text' class="center text-big bold">
+            <div id='personal' class="center text-big bold">
                 Hi. My name is James Bond. This is my webapp!
             </div>
             <hr/>
           
-            <div class="center text-big bold">
+            <div id="prof" class="center text-big bold">
                 I work at Universal Exports.
             </div>
             <hr/>
