[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,11 +12,15 @@
             <br>
            
             <div id='personal' class="center text-big bold">
+                <hr/>
+                <h3> Personal</h3>
                 Hi. My name is James Bond. This is my webapp!
             </div>
             <hr/>
           
             <div id="prof" class="center text-big bold">
+                <hr/>
+                <h3> Professional </h3>
                 I work at Universal Exports.
             </div>
             <hr/>
