--- a/ui/index.html
+++ b/ui/index.html
@@ -30,7 +30,7 @@
                 <hr/>
                 <input type="text" id="name" placeholder="name"></input>
                 <input type="submit" value="Submit" id="submit_btn"></input>
-                <input type="clear" value="Clear" id="clear_btn"></input>
+                <input type="Submit" value="Clear" id="clear_btn"></input>
                 <ul id="namelist"></ul>
             </div>
         </div>
